[Qt] Add object to count number of "user actions".
This CL adds an object that counts the number of user actions on
relevant UI widgets.

- Mark ui elements for which we want to report metrics with a dynamic
  property "report_metrics".
  - A future CL will use the value of this property (true/false) to
    determine whether detailed metrics about this widget should be
    collected.
- Add an object that just counts the total number of relevant events.
- Use this object to report number of user actions with a crash report.

BUG:b.android.com/208131

Change-Id: Id8e708d746f5c9761adbff566cbe17e2cbbd197e

--- a/android/skin/qt/extended-pages/battery-page.ui
+++ b/android/skin/qt/extended-pages/battery-page.ui
@@ -55,6 +55,9 @@
    <property name="styleSheet">
     <string notr="true">padding: 3px 3px 3px 3px;</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
    <item>
     <property name="text">
      <string>Good</string>
@@ -130,6 +133,9 @@
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
+    <property name="report_metrics" stdset="0">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QLineEdit" name="bat_chargeLevelText">
     <property name="enabled">
@@ -169,6 +175,9 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+    <property name="report_metrics" stdset="0">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
@@ -216,6 +225,9 @@
    </property>
    <property name="currentIndex">
     <number>1</number>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
    <item>
     <property name="text">
@@ -266,6 +278,9 @@
    </property>
    <property name="maxVisibleItems">
     <number>4</number>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
    <item>
     <property name="text">
