--- a/android/skin/qt/extended-pages/virtual-sensors-page.ui
+++ b/android/skin/qt/extended-pages/virtual-sensors-page.ui
@@ -26,7 +26,7 @@
     <string notr="true"/>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -169,6 +169,9 @@
        <height>291</height>
       </rect>
      </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
+     </property>
     </widget>
     <widget class="QRadioButton" name="accelModeRotate">
      <property name="geometry">
@@ -185,6 +188,9 @@
      <property name="checked">
       <bool>true</bool>
      </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
+     </property>
     </widget>
     <widget class="QRadioButton" name="accelModeMove">
      <property name="geometry">
@@ -197,6 +203,9 @@
      </property>
      <property name="text">
       <string>Move</string>
+     </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
      </property>
     </widget>
    </widget>
@@ -226,6 +235,9 @@
        <height>80</height>
       </rect>
      </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
+     </property>
     </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
@@ -248,6 +260,9 @@
        <width>250</width>
        <height>80</height>
       </rect>
+     </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_7">
@@ -295,6 +310,9 @@
         <property name="class" stdset="0">
          <string>EditableValue</string>
         </property>
+        <property name="report_metrics" stdset="0">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item>
@@ -315,6 +333,9 @@
         </property>
         <property name="class" stdset="0">
          <string>EditableValue</string>
+        </property>
+        <property name="report_metrics" stdset="0">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -337,6 +358,9 @@
         <property name="class" stdset="0">
          <string>EditableValue</string>
         </property>
+        <property name="report_metrics" stdset="0">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
      </layout>
@@ -349,6 +373,9 @@
        <width>250</width>
        <height>80</height>
       </rect>
+     </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_9">
@@ -373,6 +400,9 @@
        <height>80</height>
       </rect>
      </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
+     </property>
     </widget>
     <widget class="QLabel" name="label_10">
      <property name="geometry">
@@ -395,6 +425,9 @@
        <width>250</width>
        <height>80</height>
       </rect>
+     </property>
+     <property name="report_metrics" stdset="0">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_11">
