Remove ugly focus rectangle from buttons
Change-Id: I8ec5ba539f0c8b66458db01e2f478062a1c3a025

--- a/android/skin/qt/styles/stylesheet_template.css
+++ b/android/skin/qt/styles/stylesheet_template.css
@@ -69,6 +69,7 @@ QCheckBox::indicator:checked {
 QCheckBox::indicator:unchecked {
     image: url(:/%%PATH%%/check_no)
 }
+QPushButton {outline: none}
 QPushButton:pressed[ToolWindowButton=true], QPushButton:checked[ToolWindowButton=true] {
     border: none;
     background: %%TAB_DARKENED_COLOR%%;
