[Qt] Add object to count number of "user actions".
This CL adds an object that counts the number of user actions on
relevant UI widgets.

- Mark ui elements for which we want to report metrics with a dynamic
  property "report_metrics".
  - A future CL will use the value of this property (true/false) to
    determine whether detailed metrics about this widget should be
    collected.
- Add an object that just counts the total number of relevant events.
- Use this object to report number of user actions with a crash report.

BUG:b.android.com/208131

(cherry-picked from emu-master-dev with conflicts)

Change-Id: Id8e708d746f5c9761adbff566cbe17e2cbbd197e

--- a/android/skin/qt/extended-pages/dpad-page.ui
+++ b/android/skin/qt/extended-pages/dpad-page.ui
@@ -44,6 +44,9 @@
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_down_pressed</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="dpad_leftButton">
    <property name="geometry">
@@ -75,6 +78,9 @@
    </property>
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_left_pressed</string>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="dpad_forwardButton">
@@ -108,6 +114,9 @@
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_forward_pressed</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="dpad_playButton">
    <property name="geometry">
@@ -139,6 +148,9 @@
    </property>
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_play_pressed</string>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="dpad_upButton">
@@ -172,6 +184,9 @@
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_up_pressed</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="dpad_rightButton">
    <property name="geometry">
@@ -203,6 +218,9 @@
    </property>
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_right_pressed</string>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="dpad_backButton">
@@ -236,6 +254,9 @@
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_back_pressed</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="dpad_selectButton">
    <property name="geometry">
@@ -267,6 +288,9 @@
    </property>
    <property name="themeIconNamePressed" stdset="0">
     <string>dpad_select_pressed</string>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
