--- a/android/skin/qt/extended-pages/finger-page.ui
+++ b/android/skin/qt/extended-pages/finger-page.ui
@@ -39,6 +39,9 @@
    <property name="ColorGroup" stdset="0">
     <string notr="true">Tool</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QGroupBox" name="finger_IdGroup">
    <property name="geometry">
@@ -82,6 +85,9 @@
    </property>
    <property name="maxVisibleItems">
     <number>10</number>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
