--- a/android/skin/qt/extended-pages/location-page.ui
+++ b/android/skin/qt/extended-pages/location-page.ui
@@ -49,6 +49,9 @@
      <height>27</height>
     </rect>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
    <item>
     <property name="text">
      <string>Speed 1X</string>
@@ -101,6 +104,9 @@
    <property name="ColorGroup" stdset="0">
     <string>Tool</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="label_12">
    <property name="geometry">
@@ -152,6 +158,9 @@
    <property name="ColorGroup" stdset="0">
     <string>Tool</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="label_13">
    <property name="geometry">
@@ -201,6 +210,9 @@
    <property name="ColorGroup" stdset="0">
     <string>Tool</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="AngleInputWidget" name="loc_longitudeInput" native="true">
    <property name="geometry">
@@ -210,6 +222,9 @@
      <width>280</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QRadioButton" name="loc_sexagesimalModeSwitch">
@@ -236,6 +251,9 @@
      <height>24</height>
     </size>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="AngleInputWidget" name="loc_latitudeInput" native="true">
    <property name="geometry">
@@ -245,6 +263,9 @@
      <width>280</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QGroupBox" name="locationGroup_2">
@@ -425,6 +446,9 @@
    <property name="class" stdset="0">
     <string>EditableValue</string>
    </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
+   </property>
   </widget>
   <widget class="QRadioButton" name="loc_decimalModeSwitch">
    <property name="geometry">
@@ -454,6 +478,9 @@
    </property>
    <property name="checked">
     <bool>true</bool>
+   </property>
+   <property name="report_metrics" stdset="0">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_14">
