Use QPlainTextEdit instead of QTextBrowser
For reasons that probably have to do with the occult,
QTextBrowser (with a lot of text) makes the
QGraphicsEffects render incredibly slowly
on Windows 10.
The licenses on the help page have a lot of text, which
means on Windows 10, the buttons with a drop shadow
on Location, Telephony and Fingerprint pages can take
*several seconds* to render.
Changing the widget for license text from QTextBrowser to
QPlainTextEdit solves the problem and is an acceptable fix
since the text doesn't have any rich formatting anyway.

Change-Id: Id0983e98f1c2bb25066cef5cded5026a61ca13ee

--- a/android/skin/qt/extended-pages/help-page.ui
+++ b/android/skin/qt/extended-pages/help-page.ui
@@ -79,7 +79,7 @@
        <string>Command</string>
       </property>
       <property name="textAlignment">
-       <set>AlignLeft|AlignVCenter</set>
+       <set>AlignLeading|AlignVCenter</set>
       </property>
      </column>
      <column>
@@ -87,7 +87,7 @@
        <string>Key</string>
       </property>
       <property name="textAlignment">
-       <set>AlignLeft|AlignVCenter</set>
+       <set>AlignLeading|AlignVCenter</set>
       </property>
      </column>
     </widget>
@@ -209,7 +209,7 @@
     <attribute name="title">
      <string>Licenses</string>
     </attribute>
-    <widget class="QTextBrowser" name="help_licenseText">
+    <widget class="QPlainTextEdit" name="help_licenseText">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -223,6 +223,9 @@
        <family>Roboto</family>
        <pointsize>10</pointsize>
       </font>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
