Limit magnetometer values
Per discussion with J, putting magnetometer values
into spin boxes

Change-Id: Ib5ecd5fe5ee6e6f85f738d17ccb3b680f612dfd2

--- a/android/skin/qt/styles/fonts_stylesheet_template.css
+++ b/android/skin/qt/styles/fonts_stylesheet_template.css
@@ -11,7 +11,7 @@
  */
 
 QGroupBox { font-weight: regular; font-size: %%FONT_MEDIUM%%; }
-QComboBox, QLineEdit, QPlainTextEdit, QPushButton, QRadioButton {
+QComboBox, QLineEdit, QPlainTextEdit, QPushButton, QRadioButton, QAbstractSpinBox {
     font-weight: regular;
     font-size: %%FONT_LARGE%%;
 }
